--- a/MetaWeather.NET.Tests/MetaWeather.NET.Tests.csproj
+++ b/MetaWeather.NET.Tests/MetaWeather.NET.Tests.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MetaWeather.NET\MetaWeather.NET.csproj" />
+  </ItemGroup>
+
 </Project>
